--- a/autres/star/1plike140.html
+++ b/autres/star/1plike140.html
@@ -87,7 +87,7 @@
             <tbody>
             <tr>
               <td class="bg-dark text-white"> 4PM - 5PM</td>
-              <td class="bg-secondary text-white">Astérion </td>
+              <td class="bg-dark text-white"></td>
             </tr>
             </tbody>
             <tbody>
@@ -99,7 +99,7 @@
             <tbody>
             <tr>
               <td class="bg-dark text-white"> 6PM - 7PM</td>
-              <td class="bg-secondary text-white">El Barto</td>
+              <td class="bg-dark text-white"> </td>
             </tr>
             </tbody>
             <tbody>
@@ -111,7 +111,7 @@
             <tbody>
             <tr>
               <td class="bg-dark text-white"> 8PM - 9PM</td>
-              <td class="bg-secondary text-white">Hello Kitty </td>
+              <td class="bg-dark text-white"> </td>
             </tr>
             </tbody>
             <tbody>
@@ -123,7 +123,7 @@
             <tbody>
             <tr>
               <td class="bg-dark text-white"> 10PM - 11PM</td>
-              <td class="bg-secondary text-white"> Mr. Léonide</td>
+              <td class="bg-dark text-white">  </td>
             </tr>
             </tbody>
             <tbody>
