--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -94,7 +94,7 @@
                     <p>Hello Kitty</p>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/jew.PNG" alt="macaron" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/jew.gif" alt="macaron" class="rounded-circle border-2 ">
                     <p>J.E.W.</p>
                 </div>
 
