--- a/autres/friday.html
+++ b/autres/friday.html
@@ -71,7 +71,7 @@
                 <p>Bassem</p>
             </div>
 
-            <div class="col colx m-3"><img src="../assets/img/jew.PNG" alt="macaron" class="rounded-circle border-2 ">
+            <div class="col colx m-3"><img src="../assets/img/jew.gif" alt="macaron" class="rounded-circle border-2 ">
                 <p>J.E.W.</p>
             </div>
         </div>
