--- a/autres/volunteer.html
+++ b/autres/volunteer.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Programmation</title>
+  <title>volunteer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
@@ -36,39 +36,50 @@
 
 <main class="text-center">
 
-  <div class="bg-secondary text-white p-5  vh-75 vw-100">
+  <div class="bg-transparent text-white p-5  vh-75 vw-100">
     <h1 class="mb-5"> BECOME A VOLUNTEER</h1>
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
   </div>
 
-  <div class="p-5 text-white bg-dark m-5 rounded-5 shadow-lg">
+  <div class="box p-5 text-white m-5 rounded-5 shadow-lg">
     <h2 class="m-5">SIGN UP RIGHT HERE :</h2>
     <form action="traitement.php" method="POST" class="row row-cols-1 justify-content-center text-center">
 
-      <div class="row row-cols-1 row-cols-md-1 justify-content-center text-center">
+      <div class="row row-cols-1 row-cols-lg-2 row-cols-sm-1 justify-content-center text-center">
         <div class="col form-group pb-4">
-          <input type="text" name="firstName" class="form-control w-75 mx-auto p-2 " id="firstname" placeholder="First name" autocomplete="given-name" required />
+          <input type="text" name="firstName" class="form-control w-75 mx-auto p-2"
+                 id="firstname" placeholder="First name :" autocomplete="given-name" required/>
         </div>
 
         <div class="col form-group pb-4">
-          <input type="text" name="lastName" class="form-control w-75 mx-auto p-2  " id="name" placeholder="Last name" autocomplete="family-name" required />
+          <input type="text" name="lastName" class="form-control w-75 mx-auto p-2"
+                 id="lastname" placeholder="Last name :" autocomplete="family-name" required />
         </div>
 
         <div class="col form-group pb-4">
-          <input type="number" min="0" class="form-control w-75 mx-auto p-2  " name="age" id="age" placeholder="Age" autocomplete="age" required />
+          <input type="number" name="age" class="form-control w-75 mx-auto p-2"
+                 id="age" placeholder="Age :" autocomplete="age" required
+                 min="1" max="99" />
         </div>
 
         <div class="col form-group pb-4">
-          <input type="email" class="form-control w-75 mx-auto p-2  " name="email" id="email" placeholder="Email" autocomplete="email" required />
+          <input type="email" class="form-control w-75 mx-auto p-2"
+                 name="email" id="email" placeholder="Email :" autocomplete="email" required
+                 pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                 title="Veuillez entrer une adresse email valide." />
         </div>
 
         <div class="col form-group pb-4">
-          <input type="number" min="0" class="form-control w-75 mx-auto p-2  " name="phone" id="phone" placeholder="Phone number" autocomplete="phone" required />
+          <input type="tel" class="form-control w-75 mx-auto p-2"
+                 name="phone" id="phone" placeholder="Phone number :" autocomplete="tel" required
+                 pattern="[0-9]{10,15}"
+                 title="Veuillez entrer un numéro valide." />
         </div>
 
-        <div class="pb-4">
-          <select class=" col form-control w-75 mx-auto " name="jobs" id="jobs" required>
-            <option value="" disabled selected> - Choose a job - </option>
+        <div class="col pb-4">
+          <label for="jobs" class="d-block text-center "></label>
+          <select class="form-control w-75 mx-auto p-2" name="jobs" id="jobs" required>
+            <option value="" disabled selected > Choose a job : </option>
             <option value="Ticketing">Ticketing</option>
             <option value="Eco Team">Eco Team</option>
             <option value="Beverage">Beverage</option>
@@ -76,18 +87,18 @@
             <option value="All">All</option>
           </select>
         </div>
-
-        <div class=" row col form-group pb-4 ">
+      </div>
+        <div class=" row col form-group pb-4 pt-4 ">
           <label> <input type="checkbox"> Keep me updated on EFREI'STIVAL news</label>
         </div>
 
         <div class=" row col form-group pb-4 ">
           <label> <input type="checkbox" required> Accept the terms and conditions of use</label>
         </div>
-      </div>
+
 
       <div class="container d-flex justify-content-center w-50 ">
-        <button type="submit" class="col  rounded-5 m-3 pb-1 pt-1 w-50 text-center bg-dark text-white">
+        <button type="submit" class="box col rounded-5 m-3 pb-1 pt-1 w-50 text-center  text-white">
           SUBMIT
         </button>
       </div>
