--- a/autres/volunteer.html
+++ b/autres/volunteer.html
@@ -23,7 +23,7 @@
           <li><a href="../index.html">ACCUEIL</a></li>
           <li><a href="../autres/ticket.html">TICKETS</a></li>
           <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
-          <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
+          <li><a href="../autres/volunteer.html">BÉNÉVOLE</a></li>
           <li><a href="../autres/infos.html">INFOS</a></li>
         </ul>
       </div>
