--- a/autres/infos.html
+++ b/autres/infos.html
@@ -23,7 +23,7 @@
                         <li><a href="../index.html">ACCUEIL</a></li>
                         <li><a href="../autres/ticket.html">TICKETS</a></li>
                         <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
-                        <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
+                        <li><a href="volunteer.html">BÉNÉVOLE</a></li>
                         <li><a href="../autres/infos.html">INFOS</a></li>
                     </ul>
                 </div>
@@ -42,12 +42,12 @@
             <br>
         </div>
 
-        <div class="bg-dark text-white  p-5 vh-60 m-5 rounded-5 shadow">
+        <div class="box text-white  p-5 vh-60 m-5 rounded-5 shadow">
             <h1 class="mb-5"> FREE PALESTINE !</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
             <br>
             <div class="prog container d-flex justify-content-center w-75">
-                <button type="submit" class="col  rounded-5 m-3 pb-1 pt-1  text-center bg-dark text-white">
+                <button type="submit" class="bouton col rounded-5 m-3 pb-1 pt-1  text-center text-white">
                     DONATE NOW
                 </button>
             </div>
@@ -66,7 +66,7 @@
                 </a>
             </div>
 
-            <div class="col colx m-3 ">
+            <div class="col colx m-3">
                 <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/"><img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-5 border-2 ">
                 <h2>Chahé PAPAZIAN</h2>
                 </a>
@@ -79,37 +79,44 @@
             </div>
         </div>
 
-        <div class="p-5 m-5 bg-dark rounded-5 shadow-lg ">
+        <div class="box p-5 m-5 rounded-5 shadow-lg ">
             <h1 class="m-5">CONTACT US</h1>
             <form action="traitement.php" method="POST" class="row row-cols-1 justify-content-center text-center">
 
-                <div class="row row-cols-1 row-cols-md-1 justify-content-center text-center">
+                <div class="row row-cols-1  row-cols-sm-1 justify-content-center text-center">
                     <div class="col form-group pb-4">
-                        <input type="text" name="firstName" class="form-control w-75 mx-auto" id="firstname" placeholder="First name" autocomplete="given-name" required />
+                        <input type="text" name="firstName" class="form-control w-75 mx-auto p-2"
+                               id="firstname" placeholder="First name :" autocomplete="given-name" required/>
                     </div>
 
                     <div class="col form-group pb-4">
-                        <input type="text" name="lastName" class="form-control w-75 mx-auto" id="name" placeholder="Last name" autocomplete="family-name" required />
+                        <input type="text" name="lastName" class="form-control w-75 mx-auto p-2"
+                           id="lastname" placeholder="Last name :" autocomplete="family-name" required />
                     </div>
 
                     <div class="col form-group pb-4">
-                        <input type="email" class="form-control w-75 mx-auto" name="email" id="email" placeholder="Email" autocomplete="email" required />
+                        <input type="email" class="form-control w-75 mx-auto p-2"
+                               name="email" id="email" placeholder="Email :" autocomplete="email" required
+                               pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                               title="Veuillez entrer une adresse email valide." />
+                    </div>
+
+                    <div class="col form-group pb-4">
+                        <input type="text" class="form-control w-75 mx-auto" name="subject"
+                               id="subject" placeholder="Subject :" required />
+                    </div>
+
+                    <div class="col form-group pb-4">
+                        <textarea class="form-control w-75 mx-auto" name="message"
+                                  rows="5" placeholder="Message :" required></textarea>
                     </div>
                 </div>
+                    <div class="container d-flex justify-content-center w-50 ">
+                        <button type="submit" class="bouton col rounded-5 m-3 pb-1 pt-1 w-50 text-center text-white">
+                            SUBMIT
+                        </button>
+                    </div>
 
-                <div class="col form-group pb-4">
-                    <input type="text" class="form-control w-75 mx-auto" name="subject" id="subject" placeholder="Subject" required />
-                </div>
-
-                <div class="col form-group pb-4">
-                    <textarea class="form-control w-75 mx-auto" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-
-                <div class="container d-flex justify-content-center w-50 ">
-                    <button type="submit" class="col rounded-5 m-3 pb-1 pt-1 w-50 text-center bg-dark text-white">
-                        SUBMIT
-                    </button>
-                </div>
             </form>
         </div>
 
