--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -23,7 +23,7 @@
                         <li><a href="../index.html">ACCUEIL</a></li>
                         <li><a href="../autres/ticket.html">TICKETS</a></li>
                         <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
-                        <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
+                        <li><a href="volunteer.html">BÉNÉVOLE</a></li>
                         <li><a href="../autres/infos.html">INFOS</a></li>
                     </ul>
                 </div>
@@ -40,19 +40,19 @@
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
         </div>
 
-        <div class="text-center text-white m-4 bg-dark  rounded-5 shadow-lg">
-            <h1 class="pt-5 pb-5"> ALL LINE-UP</h1>
+        <div class="box text-center text-white m-5 rounded-5 shadow-lg">
+            <h1 class="pt-5"> ALL LINE-UP</h1>
             <br>
             <div class="prog row  row-cols-1 row-cols-md-1 row-cols-lg-5 d-flex justify-content-center  ">
-                <a href="lineup.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75 text-center bg-dark text-white">All</button></a>
-                <a href="../autres/friday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75  text-center bg-dark text-white">Friday 1st</button></a>
-                <a href="../autres/saturday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75  text-center bg-dark text-white">Saturday 2nd</button></a>
-                <a href="../autres/sunday.html"><button type="submit" class="col  rounded-5 m-2 p-2 w-75 text-center bg-dark text-white">Sunday 3rd</button></a>
+                <a href="lineup.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75 text-center  text-white">All</button></a>
+                <a href="../autres/friday.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75  text-center  text-white">Friday 1st</button></a>
+                <a href="../autres/saturday.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75  text-center  text-white">Saturday 2nd</button></a>
+                <a href="../autres/sunday.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75 text-center  text-white">Sunday 3rd</button></a>
             </div>
 
 
             <br>
-            <div class=" row  row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-center  m-lg-5">
+            <div class=" row row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-center m-lg-5">
                 <div class="col colx m-3">
                     <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle  ">
                     <p>1plike Prime</p></a>
@@ -123,13 +123,13 @@
             </div>
         </div>
         <br>
-        <div class=" text-center text-white bg-secondary m-4 wh-100 rounded-5  ">
-            <div class="  m-5">
+        <div class="box text-center text-white m-5 wh-100 rounded-5">
+            <div class="m-5">
                 <h1 class="pt-5">SCHEDULE</h1>
             </div>
 
-            <div class="w-100">
-                <table class="table table-bordered w-75 w-lg-50 mx-auto">
+            <div class="w-100 pb-5">
+                <table class="table table-bordered w-75 w-lg-50 mx-auto ">
                     <thead>
                         <tr>
                             <th class="bg-dark text-white">TIME</th>
