--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -35,95 +35,89 @@
     <!-- ========== main ========== -->
 
     <main class="text-center">
-        <div class="bg-secondary text-white bg-transparent vh-50  p-5">
-            <h1 class="pb-5"> DISCOVER THE LINE-UP</h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
-        </div>
-
-        <div class="box text-center text-white m-5 rounded-5 shadow-lg">
+        <div class="box text-center text-white shadow-lg">
             <h1 class="pt-5"> ALL LINE-UP</h1>
             <br>
-            <div class="prog row  row-cols-1 row-cols-md-1 row-cols-lg-5 d-flex justify-content-center  ">
-                <a href="lineup.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75 text-center  text-white">All</button></a>
-                <a href="../autres/friday.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75  text-center  text-white">Friday 1st</button></a>
-                <a href="../autres/saturday.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75  text-center  text-white">Saturday 2nd</button></a>
-                <a href="../autres/sunday.html"><button type="submit" class="bouton col rounded-5 m-2 p-2 w-75 text-center  text-white">Sunday 3rd</button></a>
+            <div class=" row  row-cols-1 row-cols-lg-5 d-flex justify-content-evenly ">
+                <a href="lineup.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100 text-center  ">All</button></a>
+                <a href="../autres/friday.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100  text-center  ">Friday 1st</button></a>
+                <a href="../autres/saturday.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100  text-center  ">Saturday 2nd</button></a>
+                <a href="../autres/sunday.html"><button type="submit" class=" col mt-2 mb-2  p-2 w-100 text-center ">Sunday 3rd</button></a>
             </div>
 
-
             <br>
-            <div class=" row row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-center m-lg-5">
-                <div class="col colx m-3">
-                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle  ">
-                    <p>1plike Prime</p></a>
+            <div class=" row row-cols-3 row-cols-md-4 row-cols-lg-6 d-flex justify-content-evenly m-lg-5">
+                <div class="col colx m-1">
+                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-5">
+                    <p class="mt-3">1plike Prime</p></a>
                 </div>
 
-                <div class="col colx m-3">
-                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="rounded-circle border-2 ">
-                    <p>Fraise OASIS</p>
+                <div class="col colx m-1">
+                    <img src="../assets/img/fraise.jpg_large" alt="ASAP" class="rounded-5 border-2 ">
+                    <p class="mt-3">Fraise OASIS</p>
                 </div>
 
-                <div class="col colx m-3 ">
-                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
-                        <p>Mr. Léonide</p></a>
+                <div class="col colx m-1">
+                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-5 border-2 ">
+                        <p class="mt-3">Mr. Léonide</p></a>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-circle border-2 ">
-                    <p>Gattouz</p>
+                <div class="col colx m-1"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-5 border-2 ">
+                    <p class="mt-3">Gattouz</p>
                 </div>
 
-                <div class="col colx m-3">
-                    <img src="../assets/img/fave.jpg" alt="macaron" class="rounded-circle border-2 ">
-                    <p> FAVÉÉÉ</p>
+                <div class="col colx m-1">
+                    <img src="../assets/img/fave.jpg" alt="macaron" class="rounded-5 border-2 ">
+                    <p class="mt-3"> FAVÉÉÉ</p>
                 </div>
 
-                <div class="col colx m-3">
-                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
-                        <p>El Barto</p></a>
+                <div class="col colx m-1">
+                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-5 border-2 ">
+                        <p class="mt-3">El Barto</p></a>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/kaaris.PNG" alt="pims" class="rounded-circle border-2 ">
-                    <p>Kaaris</p>
+                <div class="col colx m-1"><img src="../assets/img/kaaris.PNG" alt="pims" class="rounded-5 border-2 ">
+                    <p class="mt-3">Kaaris</p>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/furry.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                    <p>Timéo la Zanga</p>
+                <div class="col colx m-1"><img src="../assets/img/furry.jpg" alt="ASAP" class="rounded-5 border-2 ">
+                    <p class="mt-3">Timéo la Zanga</p>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-circle border-2 ">
-                    <p>Hello Kitty</p>
+                <div class="col colx m-1"><img src="../assets/img/kitty.gif" alt="kitty" class="rounded-5 border-2 ">
+                    <p class="mt-3">Hello Kitty</p>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/jew.gif" alt="macaron" class="rounded-circle border-2 ">
-                    <p>J.E.W.</p>
+                <div class="col colx m-1"><img src="../assets/img/jew.gif" alt="macaron" class="rounded-5 border-2 ">
+                    <p class="mt-3">J.E.W.</p>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/frog.jpg" alt="bee" class="rounded-circle border-2 ">
-                    <p>Crazy Frog</p>
+                <div class="col colx m-1"><img src="../assets/img/bassem.jpg" alt="macaron" class="rounded-5 border-2 ">
+                    <p class="mt-3">Bassem</p>
                 </div>
 
-                <div class="col colx m-3"><img src="../assets/img/bassem.jpg" alt="macaron" class="rounded-circle border-2 ">
-                    <p>Bassem</p>
+                <div class="col colx m-1"><img src="../assets/img/frog.jpg" alt="bee" class="rounded-5 border-2 ">
+                    <p class="mt-3">Crazy Frog</p>
                 </div>
 
-                <div class="col colx m-3">
-                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                    <p>Astérion</p>
+                <div class="col colx m-1">
+                    <img src="../assets/img/kirby.jpg" alt="ASAP" class="rounded-5 border-2 ">
+                    <p class="mt-3">Astérion</p>
                 </div>
 
-                <div class="col colx m-3 ">
-                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
-                        <p>Julien Naty</p></a>
+                <div class="col colx m-1">
+                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-5 border-2 ">
+                        <p class="mt-3">Julien Naty</p></a>
                 </div>
 
-                <div class="col colx m-3">
-                    <img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
-                    <p>Killer Bee</p>
+                <div class="col colx m-1">
+                    <img src="../assets/img/bee.gif" alt="bee" class="rounded-5 border-2 ">
+                    <p class="mt-3">Killer Bee</p>
                 </div>
             </div>
         </div>
         <br>
-        <div class="box text-center text-white m-5 wh-100 rounded-5">
+        <div class="box text-center text-white wh-100 ">
             <div class="m-5">
                 <h1 class="pt-5">SCHEDULE</h1>
             </div>
@@ -240,15 +234,16 @@
     </main>
     <!-- ========== fin main ========== -->
     <!-- ========== footer ========== -->
-
     <footer>
-        <p>Copyright &copy; 2025 — All rights reserved.</p>
-        <p>Designed by
-            <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
-            <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
-            <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
-            <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
-        </p>
+        <div class="m-2 text-center">
+            <h6>Copyright &copy; 2025 — All rights reserved.</h6>
+            <h6>Designed by
+                <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
+                <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
+                <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
+                <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
+            </h6>
+        </div>
     </footer>
     <!-- ========== fin footer ========== -->
 </body>
