--- a/autres/star/1plike140.html
+++ b/autres/star/1plike140.html
@@ -36,11 +36,11 @@
 
 <main class="text-center">
 
-    <div class="prog row d-flex justify-content-center pt-5 ">
-        <a href="javascript:history.back()"><button type="submit" class="col  rounded-5 m-2 p-2 w-50 text-center bg-secondary text-white">Back</button></a>
+    <div class="  col justify-content-center pt-5 ">
+        <a href="javascript:history.back()"><button class="bouton col rounded-5 m-2 p-2 w-50 text-center text-white">Back</button></a>
     </div>
 
-        <div class="bg-dark text-white m-5 rounded-5 p-5">
+        <div class="box text-white m-5 rounded-5 p-5">
           <h1 class="mt-5"> 1PLIKE140</h1>
 
           <div class=" row  row-cols-1 row-cols-md-2 row-cols-lg-2 d-flex justify-content-center  p-2">
@@ -49,11 +49,11 @@
               </div>
           </div>
                 <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aspernatur, assumenda dolores, laboriosam neque nostrum quae quas quidem, similique ut voluptate! Aliquam dolorum expedita ut vitae! At, ipsam odit.</p></a>
-      </div>
+        </div>
     </div>
     <br>
     <br>
-    <div class=" text-center text-white   rounded-3 vw-100 wh-100">
+    <div class=" text-center text-white rounded-3 vw-100 wh-100">
         <div class="  m-5">
            <h1>SCHEDULE</h1>
         </div>
@@ -144,15 +144,16 @@
   </main>
   <!-- ========== fin main ========== -->
   <!-- ========== footer ========== -->
-
 <footer>
-  <p>Copyright &copy; 2025 — All rights reserved.</p>
-  <p>Designed by
-    <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
-    <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
-    <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
-    <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
-  </p>
+  <div class="m-2 text-center">
+    <h6>Copyright &copy; 2025 — All rights reserved.</h6>
+    <h6>Designed by
+      <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
+      <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
+      <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
+      <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
+    </h6>
+  </div>
 </footer>
 <!-- ========== fin footer ========== -->
 </body>
